manifests/app/ping-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: ping-dc
  namespace: allianz
spec:
  selector:
    name: ping-app
  replicas: 1
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        name: ping-app
      name: ping-app
    spec:
      containers:
        - image: ' '
          name: ping-app
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: '/ping'
              port: 8000
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: '/ping'
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              memory: 512Mi
  triggers:
    - imageChangeParams:
        automatic: false
        containerNames:
        - "ping-app"
        from:
          kind: ImageStreamTag
          name: ping-app:latest
      type: ImageChange
    - type: ConfigChange
